--- a/qp_phonix_front/templates/item_formulary/table.html
+++ b/qp_phonix_front/templates/item_formulary/table.html
@@ -1,6 +1,7 @@
     <input type="hidden" id="pagination_control" value = 0>
     <input type="hidden" id="petition_control" value = 0>
-
+    <!--p style="color: #c0c0c0;">Precios antes de iva </p-->
+    <p >Precios antes de iva </p>
     <table class = "item_list" id = "table_item_list" width= 100%>
         <thead >
             <th width = 10% class="lateralleft margin-left" style="padding: 10px;">Imagen</th>
