--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -235,7 +235,7 @@ button {
         <div class="col-md-2 text-left ">
             <div class="row" style="position: absolute; top:0px">
                 <!--a id="filter_clear">LIMPIAR FILTRO</a-->
-                <a id="filter_clear" onclick=location.reload()>LIMPIAR FILTRO</a>
+                <a id="filter_clear" onclick=location.reload()>LIMPIAR</a>
             </div>
             
         </div>
