checkboxes delete row

--- a/qp_phonix_front/public/css/general.css
+++ b/qp_phonix_front/public/css/general.css
@@ -1,6 +1,6 @@
     
 
-    #undo, #filter_clear{
+    #undo, #filter_clear, #selected_delete{
         text-decoration: underline;
         font-size: 0.75rem;
         cursor: pointer;
