change item word

--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -260,7 +260,7 @@ button {
     <input type="hidden" id="idlevel" value="{{idlevel}}">
     <div class="row " >
         <div class="col-sm-5 text-left row-abc">
-            <input type="text" id = "filter_text" class="form-control" name="" id="" placeholder="Buscar por código de item">
+            <input type="text" id = "filter_text" class="form-control" name="" id="" placeholder="Buscar por Código de ítems">
         </div>
     </div>
     <!--p>hover on the button below to check the results</p>
