--- a/qp_phonix_front/templates/item_formulary/table.html
+++ b/qp_phonix_front/templates/item_formulary/table.html
@@ -25,7 +25,7 @@
 
             <th ><div class="margin-left ">Inventario
                 {% if permission.quantity_format %}
-                (En tránsito)
+                [En tránsito]
                 {%endif%}
 
             </div></th>
