--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -230,7 +230,7 @@ button {
                     
                     {%for class in class_list %}
                     
-                    <option  data-active-count="" {#SubCategoria.Categoria_ids|count#} value="{{class.code}}" class="select-option {{class.class}} ">
+                    <option  data-active-count="" {#SubCategoria.Categoria_ids|count#} value="{{class.title | replace(' ','--') }}" class="select-option {{class.class}} ">
                         {{class.title if class.title else class.code}}</option>
                         
                         {%endfor%}
