--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -75,7 +75,7 @@
     </tr>
     {% if item.description_full %}
     <tr data-item-name = "{{item.item_name}}" class="inventary-{{'SI' if item.quantity > 0 else 'NO'}} {{item.sku}} {{item.class_title}} item-row {{item.name | replace(':','-')}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = "{{item.name}}">
-        <td colspan="{{count}}" class="lateralright {{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.description_full}}</div></td>
+        <td colspan="{{count}}" class="lateralright {{'item_select' if item.cantidad else ''}}" style="color: #747474;font-size: 13px;"><div class="margin-left">{{item.description_full}}</div></td>
         
     </tr>
     {% endif %}
