--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -247,9 +247,9 @@ button {
                     Mostrar sólo referencias SKU
                 </label>
             </div>
-            <div class="text-left row-inventary" style="display:none">
+            <div class="text-left row-inventary" >
                 <input class="form-check-input" type="checkbox" id="with_inventary">
-                <label class="form-check-label" for="with_inventary" style="font-size: 13px;">
+                <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
                     Mostrar sólo referencias con stock
                 </label>
             </div>
