--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -248,12 +248,12 @@ button {
                     Mostrar sólo referencias SKU
                 </label>
             </div>
-            <!--div class="text-left row-inventary" >
+            <div class="text-left row-inventary" >
                 <input class="form-check-input" type="checkbox" id="with_inventary">
                 <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
                     Mostrar sólo referencias con stock
                 </label>
-            </div-->
+            </div>
 
         </div>
 
