font size equal

--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -244,7 +244,7 @@ button {
         <div class="col-md-3">
             <div class="text-left" >
                 <input class="form-check-input" type="checkbox" id="sku_true">
-                <label class="form-check-label" for="with_inventary">
+                <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
                     Mostrar sólo referencias SKU
                 </label>
             </div>
