--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -28,6 +28,7 @@
     <input type="hidden" id="qp_box_no_sku" value="{{qp_box_no_sku}}">
     <input type="hidden" id="qp_box_sku" value="{{qp_box_sku}}">
     <input type="hidden" id="qp_buy_no_sku" value="{{qp_buy_no_sku}}">
+    <input type="hidden" id="incomplete_boxes" value="{{incomplete_boxes}}">
     <div class="">
         <a  data-item-group = "{{item_group.title}}" class="item_group">{{item_group.title_pretty if item_group.title_pretty else item_group.title}} </a>
     </div>
