--- a/qp_phonix_front/templates/item_formulary/table.html
+++ b/qp_phonix_front/templates/item_formulary/table.html
@@ -1,7 +1,12 @@
     <input type="hidden" id="pagination_control" value = 0>
     <input type="hidden" id="petition_control" value = 0>
     <!--p style="color: #c0c0c0;">Precios antes de iva </p-->
-    <p >Precios antes de IVA </p>
+    <p style="width: 100%;">
+        <span style="width: 50%;display: inline-block;">Precios antes de IVA </span>
+        <span style="width: 49%;display: inline-block; text-align: right;">TRM: {{trm.exchange_rate if trm else 0}} 
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256"><path fill="currentColor" d="M140 176a4 4 0 0 1-4 4a12 12 0 0 1-12-12v-40a4 4 0 0 0-4-4a4 4 0 0 1 0-8a12 12 0 0 1 12 12v40a4 4 0 0 0 4 4a4 4 0 0 1 4 4m-16-84a8 8 0 1 0-8-8a8 8 0 0 0 8 8m104 36A100 100 0 1 1 128 28a100.11 100.11 0 0 1 100 100m-8 0a92 92 0 1 0-92 92a92.1 92.1 0 0 0 92-92"/></svg>
+        </span>
+    </p>
     <table class = "item_list"  id = "table_item_list" width= 100%>
         <thead >
             <th width = 10% class="lateralleft margin-left" style="padding: 10px;">Imagen</th>
