change: add filter list price on item formulary

--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -242,9 +242,16 @@ button {
             </div>
             
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
+            <div class="text-left row-inventary" >
+                <input class="form-check-input" type="checkbox" id="with_list_price" data-id="with_list_price">
+                <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
+                    Mostrar sólo referencias lista de precio
+                </label>
+            </div>
             <div class="text-left" >
-                <input class="form-check-input" type="checkbox" id="sku_true">
+                <input class="form-check-input" type="checkbox" id="sku_true" data-id = "sku_true">
+                
                 <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
                     Mostrar sólo referencias SKU
                 </label>
@@ -256,6 +263,7 @@ button {
                 </label>
             </div>
 
+
         </div>
 
         <div class="col-md-2 text-left clear-container">
@@ -266,7 +274,7 @@ button {
             
         </div>
 
-        <div class="col-md-2 button-new">
+        <div class="col-md-1 button-new">
             <!--button class="button-master button-default" disabled id= "save_draft" style="width: 100%;" >GUARDAR</button-->
         </div>
         <div class="col-md-2 button-new">
