add: coupon discount

--- a/qp_phonix_front/templates/defination.html
+++ b/qp_phonix_front/templates/defination.html
@@ -7,6 +7,7 @@
 
 <script src="/assets/qp_phonix_front/js/api_connection.js"></script>
 <script src="/assets/qp_phonix_front/js/select_tooltip.js"></script>
+<script src="/assets/qp_phonix_front/js/coupon.js"></script>
 
 
 {% endblock %}
