--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -12,7 +12,7 @@
 
         {% if permission.price_format %}
             {% set count = count + 1 %}
-            <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">$ {{item.price_format | replace(",",".")}} COP</div></td>
+            <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.currency_symbol}} {{item.price_format | replace(",",".")}} {{item.currency}}</div></td>
         {%endif%}
 
         {% if permission.discountpercentage %}
@@ -24,7 +24,7 @@
         {% if permission.price_discount_format %}
             {% set count = count + 1 %}
 
-            <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">$ {{item.price_discount_format | replace(",",".")}} COP</div></td>
+            <td class="{{'item_select' if item.cantidad else ''}}"><div class="margin-left">{{item.currency_symbol}} {{item.price_discount_format | replace(",",".")}} {{item.currency}}</div></td>
 
         {%endif%}
 
