add item prioritize_unit_package

--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -49,6 +49,7 @@
                     data-factor = "{{item.inqt}}" 
                     data-select= "{{item.name | replace(':','-')}}" 
                     data-sku= "{{item.sku}}"
+                    data-qp_prioritize_unit_package= "{{item.qp_prioritize_unit_package}}"
                     data-quantity_dis= "{{item.quantity_dis}}"
                     data-quantity_format = {{permission.quantity_format}}
                     data-next = {{key}}
