--- a/qp_phonix_front/public/css/general.css
+++ b/qp_phonix_front/public/css/general.css
@@ -1,6 +1,6 @@
-    
-
-    #undo, #filter_clear, .confirm_link{
+    #undo,
+    #filter_clear,
+    .confirm_link {
         text-decoration: underline;
         font-size: 0.75rem;
         cursor: pointer;
@@ -8,6 +8,16 @@
 
     }
 
-    .btn-redirect{
+    .btn-redirect {
         cursor: pointer;
+    }
+
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    input[type=number] {
+        -moz-appearance: textfield;
     }
