--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -216,7 +216,13 @@ button {
     .clear-responsive{
         display: none;
     }
-    
+    .discount-style{
+        margin: 0;
+        padding: 0;
+    }
+    .discount-style.green{
+        color:green;
+    }
 
 </style>
     <input type="hidden" id="order_id" value="{{order.so_name if order else ''}}">
@@ -246,20 +252,26 @@ button {
             <div class="text-left row-inventary" >
                 <input class="form-check-input" type="checkbox" id="with_list_price" data-id="with_list_price">
                 <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
-                    Mostrar sólo referencias lista de precio
+                    Mostrar referencias lista de precio
                 </label>
             </div>
             <div class="text-left" >
                 <input class="form-check-input" type="checkbox" id="sku_true" data-id = "sku_true">
                 
                 <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
-                    Mostrar sólo referencias SKU
+                    Mostrar referencias SKU
                 </label>
             </div>
             <div class="text-left row-inventary" >
                 <input class="form-check-input" type="checkbox" id="with_inventary">
                 <label class="form-check-label" for="with_inventary" style="font-size: 14px;">
-                    Mostrar sólo referencias con stock
+                    Mostrar referencias con stock
+                </label>
+            </div>
+            <div class="text-left row-inventary" >
+                <input class="form-check-input" type="checkbox" id="only_discount">
+                <label class="form-check-label" for="only_discount" style="font-size: 14px;">
+                    Mostrar productos en oferta
                 </label>
             </div>
 
