--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -1,7 +1,8 @@
 {%for  item in item_list %}
     {% set count = 4 %}
                     
-    <tr data-item-name = "{{item.item_name}}" data-phonix-class = "{{item.qp_phonix_class if item.qp_phonix_class else ''}}" class="inventary-{{'SI' if item.quantity > 0 else 'NO'}} {{item.sku}} {{item.class_title}} item-row item-row-base {{item.qp_phoenix_shortdescription}} {{item.name | replace(':','-')}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = "{{item.name}}" data-description = "{{item.description}}" data-code = "{{item.code}}">
+    <tr data-item-name = "{{item.item_name}}" data-phonix-class = "{{item.qp_phonix_class if item.qp_phonix_class else ''}}" 
+    class="inventary-{{'SI' if item.quantity > 0 else 'NO'}} {{item.sku}} {{ 'auto_discount' if item.discountpercentage_coupon > 0 else ''}} {{item.class_title}} item-row item-row-base {{item.qp_phoenix_shortdescription}} {{item.name | replace(':','-')}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = "{{item.name}}" data-description = "{{item.description}}" data-code = "{{item.code}}">
         
 
         <input type="hidden" id = "item_id" value= "{{item.name}}" >
@@ -86,7 +87,10 @@
         {%endif%}
     </tr>
     {% if item.description_full %}
-    <tr data-item-name = "{{item.item_name}}" class="inventary-{{'SI' if item.quantity > 0 else 'NO'}} {{item.sku}} {{item.class_title}} item-row {{item.name | replace(':','-')}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" style="{{'display: none;' if not disabled_off else ''}}" data-id = "{{item.name}}">
+    <tr data-item-name = "{{item.item_name}}" 
+        class="inventary-{{'SI' if item.quantity > 0 else 'NO'}} 
+        {{item.sku}}  {{ 'auto_discount' if item.discountpercentage_coupon > 0 else ''}} {{item.class_title}} item-row {{item.name | replace(':','-')}} {{item.item_group}} {{item.initial}} {{'row_select' if item.cantidad else ''}} {{'filter' if disabled_off else ''}}" 
+        style="{{'display: none;' if not disabled_off else ''}}" data-id = "{{item.name}}">
         <td colspan="{{count}}" class="lateralright {{'item_select' if item.cantidad else ''}}" style="color: #747474;font-size: 13px;"><div class="margin-left">{{item.description_full}}</div></td>
         
     </tr>
