[ajust] item formulary text

--- a/qp_phonix_front/templates/item_formulary/row.html
+++ b/qp_phonix_front/templates/item_formulary/row.html
@@ -26,7 +26,7 @@
                 <div class="margin-left">
                 <p class="discount-style">{{item.discountpercentage}} %</p>
                 {% if item.discountpercentage_coupon %}
-                    <p class="discount-style green">+ {{item.discountpercentage_coupon}} %</p>
+                    <p class="discount-style green">+ Promo</p>
                 {%endif%}
 
             </div></td>
