--- a/qp_phonix_front/templates/item_formulary/structure.html
+++ b/qp_phonix_front/templates/item_formulary/structure.html
@@ -344,9 +344,9 @@
         </button>
 
     </div>
-    <div class="col-sm-12 col-md-3 text-left row-abc">
-        <button class="button-master button-default reconcile" id="reconcile">
-                Conciliar
+    <div class="col-sm-12 col-md-6 text-left row-abc" >
+        <button class="button-master button-default reconcile" id="reconcile" style="padding: 7px;">
+            Consolidar referencias repetidas
 
         </button>
 
